crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__if_elif_else.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> if_elif_else.py:6:5
  |
4 |       from setuptools.command.sdist import sdist as _sdist
5 |   else:
6 | /     from setuptools.command.sdist import sdist as _sdist
7 | |     from distutils.command.sdist import sdist as _sdist
  | |_______________________________________________________^
help: Organize imports
  |
6 +     from distutils.command.sdist import sdist as _sdist
7 +     from setuptools.command.sdist import sdist as _sdist
  |
