crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__import_from_after_import.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> import_from_after_import.py:1:1
  |
1 | / from collections import Collection
2 | | import os
  | |_________^
help: Organize imports
  |
1 + import os
2 + from collections import Collection
  |
