crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__import_heading_force_sort_within_sections_import_heading_force_sort_within_sections.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> import_heading_force_sort_within_sections.py:1:1
  |
1 | / from __future__ import annotations
2 | | from typing import Any
3 | |
4 | | import requests
5 | | import pandas
  | |_____________^
help: Organize imports
  |
1 + # Future imports
2 + from __future__ import annotations
3 + 
4 + # Standard library imports
5 + from typing import Any
6 + 
7 + # Third party imports
8 + import pandas
9 + import requests
  |
