crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__import_heading_import_heading.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> import_heading.py:1:1
   |
 1 | / from __future__ import annotations
 2 | |
 3 | | import os
 4 | | import sys
 5 | |
 6 | | import requests
 7 | | import pandas
 8 | |
 9 | | from my_first_party import my_first_party_object
10 | |
11 | | from . import my_local_folder_object
   | |____________________________________^
help: Organize imports
   |
 1 + # Future imports
 2 + from __future__ import annotations
 3 + 
 4 + # Standard library imports
 5 + import os
 6 + import sys
 7 + 
 8 + # Third party imports
 9 + import pandas
10 + import requests
11 + 
12 + # First party imports
13 + from my_first_party import my_first_party_object
14 + 
15 + # Local folder imports
16 + from . import my_local_folder_object
   |
