crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__import_heading_import_heading_duplicate.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> import_heading_duplicate.py:3:1
  |
1 |   # Standard library imports
2 |   # Standard library imports
3 | / import os
4 | | import sys
5 | |
6 | | import requests
7 | | import pandas
  | |_____________^
help: Organize imports
  |
1 + # Standard library imports
2 + import os
3 + import sys
4 + 
5 + # Third party imports
6 + import pandas
7 + import requests
  |
