crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__import_heading_single_section_import_heading_single_section.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> import_heading_single_section.py:1:1
  |
1 | / import requests
2 | | import pandas
  | |_____________^
help: Organize imports
  |
1 + # Third party imports
2 + import pandas
3 + import requests
  |
